--- a/app/src/main/res/layout/activity_beacon.xml
+++ b/app/src/main/res/layout/activity_beacon.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#bdbdbd"
+    android:background="#004d40"
     tools:context="com.dashwood.ficby.BeaconActivity">
 
     <FrameLayout
         android:id="@+id/root"
-        android:layout_width="0dp"
-        android:layout_height="350dp"
+        android:layout_width="343dp"
+        android:layout_height="312dp"
         android:layout_marginBottom="9dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -18,22 +18,8 @@
         tools:layout_constraintRight_creator="1"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
-        tools:layout_constraintLeft_creator="1"></FrameLayout>
-
-    <ListView
-        android:id="@+id/list"
-        android:layout_width="0dp"
-        android:layout_height="500dp"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="208dp"
-        android:transitionGroup="false"
-        android:visibility="invisible"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1" />
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_editor_absoluteY="246dp"></FrameLayout>
 
     <ImageView
         android:id="@+id/beacon_pic"
@@ -43,45 +29,46 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/beacon_circle"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.133" />
 
     <Button
         android:id="@+id/btn_scan"
-        android:layout_width="1\50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="155dp"
-        android:background="@drawable/button_default"
+        android:layout_width="130dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="166dp"
+        android:background="@drawable/button_notpress"
         android:text="SCAN"
         android:textSize="20sp"
+        app:layout_constraintHorizontal_bias="0.165"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        tools:layout_constraintTop_creator="1" />
 
     <ImageView
         android:id="@+id/blue_beacon"
         android:layout_width="50dp"
         android:layout_height="75dp"
-        android:layout_marginTop="53dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_scan"
         app:srcCompat="@mipmap/blue_beacon"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintTop_toTopOf="@+id/root"
+        android:layout_marginTop="8dp" />
 
     <ImageView
         android:id="@+id/purple_beacon"
         android:layout_width="50dp"
-        android:layout_height="0dp"
+        android:layout_height="75dp"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/green_beacon"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/green_beacon"
         app:srcCompat="@mipmap/purple_beacon"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintTop_creator="1" />
@@ -90,13 +77,12 @@
         android:id="@+id/green_beacon"
         android:layout_width="50dp"
         android:layout_height="75dp"
-        android:layout_marginBottom="33dp"
-        android:layout_marginEnd="26dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@mipmap/green_beacon"
         tools:layout_constraintRight_creator="1"
-        android:layout_marginRight="16dp" />
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp" />
 
     <ImageView
         android:id="@+id/locate"
@@ -113,15 +99,77 @@
         tools:layout_constraintTop_creator="1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/beacon_list_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textColor="#000000"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toTopOf="@+id/list"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginTop="15dp"
+        android:text="TextView"
+        android:textColor="#ffffff"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/list"
+        tools:layout_constraintTop_creator="1" />
+
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="300dp"
+        android:layout_height="350dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="254dp"
+        android:transitionGroup="false"
+        android:visibility="invisible"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
+
+    <ImageView
+        android:id="@+id/locate_pic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="66dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/locate" />
+
+    <Button
+        android:id="@+id/btn_locate"
+        android:layout_width="110dp"
+        android:layout_height="35dp"
+        android:background="@drawable/button_default"
+        android:text="經緯度"
+        android:textSize="24sp"
+        android:layout_marginTop="106dp"
+        app:layout_constraintTop_toBottomOf="@+id/locate_pic"
+        android:layout_marginRight="35dp"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:id="@+id/btn_change_format"
+        android:layout_width="90dp"
+        android:layout_height="35dp"
+        android:background="@drawable/button_default"
+        android:text="地址"
+        android:textSize="24sp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/btn_locate"
+        android:layout_marginRight="44dp"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:id="@+id/locate_text"
+        android:layout_width="150dp"
+        android:layout_height="100dp"
+        android:layout_marginRight="14dp"
+        android:layout_marginTop="2dp"
+        android:gravity="center"
+        android:text="點擊 經緯度\n獲取位置\n點擊 地址\n轉換大略地址"
+        android:textAlignment="center"
+        android:textColor="#e0f7fa"
+        android:textSize="18sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/locate_pic" />
 
 </android.support.constraint.ConstraintLayout>
