--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,29 +48,29 @@
         android:id="@+id/beacon_button"
         android:layout_width="130dp"
         android:layout_height="60dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
-        android:text="Beacon"
-        android:textSize="24sp"
         android:background="@drawable/button_notpress"
+        android:text="定位"
+        android:textSize="24sp"
+        app:layout_constraintHorizontal_bias="0.122"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/account_button"
-        app:layout_constraintHorizontal_bias="0.122"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/account_button" />
 
     <Button
         android:id="@+id/band_button"
         android:layout_width="130dp"
         android:layout_height="60dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/button_notpress"
-        android:text="MI Band"
+        android:text="手環"
         android:textSize="24sp"
         app:layout_constraintHorizontal_bias="0.881"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/account_button"
-        android:layout_marginRight="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/account_button" />
 
     <Button
         android:id="@+id/more_button"
