--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -35,9 +35,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:gravity="center"
-        android:text="F-I-C  means\nFriendly iHealth Cloud\n\nconbined above concepts\nFICBY stands for a\nHealth Assistant"
+        android:text="F-I-C  means\nFriendly iHealth Cloud\n\ncombined above concepts\nFICBY stands for\nHealth Assistant"
         android:textColor="#ffffff"
-        android:textSize="28sp"
+        android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signature_pic" />
