--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,18 @@
         app:layout_constraintRight_toLeftOf="@+id/band_pic"
         app:layout_constraintTop_toTopOf="@+id/band_pic" />
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/main_animation"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:lottie_fileName="emoji_wink.json"
+        app:lottie_loop="true"
+        app:lottie_autoPlay="true"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="195dp"
+        app:layout_constraintTop_toTopOf="@+id/band_pic" />
+
     <Button
         android:id="@+id/account_button"
         android:layout_width="140dp"
