--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -18,29 +18,30 @@
         app:srcCompat="@drawable/ficby_hi_res"
         android:layout_marginStart="50dp" />
 
-    <ImageView
-        android:id="@+id/signature_pic"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/core_animation"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginTop="90dp"
-        app:layout_constraintRight_toRightOf="parent"
+        app:lottie_fileName="hardware.json"
+        app:lottie_loop="true"
+        app:lottie_autoPlay="true"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/signature"
+        android:layout_marginTop="90dp"
         android:layout_marginRight="35dp"
-        android:layout_marginEnd="35dp" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/info_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
         android:gravity="center"
         android:text="F-I-C  means\nFriendly iHealth Cloud\n\ncombined above concepts\nFICBY stands for\nHealth Assistant"
         android:textColor="#ffffff"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signature_pic" />
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/ficby_infopic" />
 
     />
 
