--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -43,7 +43,9 @@
         app:layout_constraintRight_toRightOf="@+id/forget_pic"
         app:layout_constraintTop_toTopOf="@+id/forget_pic"
         app:layout_constraintBottom_toBottomOf="@+id/forget_pic"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <EditText
         android:id="@+id/email_input"
@@ -80,11 +82,10 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="2dp"
         app:layout_constraintTop_toBottomOf="@+id/band_pic"
         android:visibility="gone"/>
 
