--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -4,65 +4,65 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#bbdefb"
+    android:background="#212230"
     tools:context="com.dashwood.ficby.AccountActivity">
 
     <ImageView
         android:id="@+id/band_pic"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginTop="7dp"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginTop="27dp"
+        app:layout_constraintHorizontal_bias="0.211"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ficby_hi_res"
-        android:layout_marginLeft="24dp" />
+        android:layout_marginLeft="36dp" />
 
-    <ImageView
-        android:id="@+id/account_pic"
-        android:layout_width="240dp"
-        android:layout_height="200dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="50dp"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/user_animation"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/account_pic" />
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="android_fingerprint.json"
+        app:lottie_loop="false" />
 
     <TextView
         android:id="@+id/account_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="42dp"
         android:text="帳號"
-        android:textColor="#4e342e"
+        android:textColor="#ef5350"
         android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/account_pic"
-        app:layout_constraintVertical_bias="0.042" />
+        app:layout_constraintTop_toBottomOf="@+id/band_pic" />
 
     <TextView
         android:id="@+id/account_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
         android:text="XXX"
-        android:textColor="#ff3d00"
+        android:textColor="#efebe9"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="13dp"
         app:layout_constraintTop_toBottomOf="@+id/account_header" />
 
     <Button
         android:id="@+id/btn_logout"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="50dp"
-        android:layout_marginTop="77dp"
+        android:layout_marginTop="82dp"
         android:background="@drawable/button_default"
         android:text="登出"
         android:textSize="24sp"
@@ -73,9 +73,9 @@
 
     <Button
         android:id="@+id/btn_backto_main"
-        android:layout_width="wrap_content"
+        android:layout_width="230dp"
         android:layout_height="50dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/button_default"
         android:text="返回 Ficby 主頁面"
         android:textSize="22sp"
@@ -83,5 +83,18 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_logout" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/circle_animation"
+        android:layout_width="300dp"
+        android:layout_height="175dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_logout"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="ai_white_circle.json"
+        app:lottie_loop="true" />
 
 </android.support.constraint.ConstraintLayout>
