--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -33,19 +33,15 @@
     <TextView
         android:id="@+id/info_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
+        android:layout_marginTop="32dp"
         android:gravity="center"
-        android:text="F-I-C  means\nFriendly iHealth Cloud\n\ncombined above concepts\nFICBY stands for\nHealth Assistant"
+        android:text="F-I-C means\nFriendly iHealth Cloud\n\ncombined above concepts\nFICBY stands for\nHealth Assistant"
         android:textColor="#ffffff"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@+id/ficby_infopic" />
-
-    />
-
-
 
 </android.support.constraint.ConstraintLayout>
 
