--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -12,23 +12,23 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="27dp"
-        app:layout_constraintHorizontal_bias="0.211"
+        app:layout_constraintHorizontal_bias="0.212"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ficby_hi_res"
-        android:layout_marginLeft="36dp" />
+        android:layout_marginLeft="32dp" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/user_animation"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="2dp"
         android:layout_marginTop="24dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
-        app:lottie_fileName="android_fingerprint.json"
+        app:lottie_fileName="touch_id.json"
         app:lottie_loop="false" />
 
     <TextView
@@ -88,8 +88,7 @@
         android:id="@+id/circle_animation"
         android:layout_width="300dp"
         android:layout_height="175dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintHorizontal_bias="0.502"
+        android:layout_marginTop="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_logout"
