--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -141,8 +141,8 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginTop="230dp"
-        android:visibility="gone"
+        android:layout_marginTop="250dp"
+        android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/band_pic" />
@@ -151,11 +151,11 @@
         android:id="@+id/check_animation"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="283dp"
+        android:layout_marginTop="281dp"
         android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/progressBar"
+        app:layout_constraintTop_toTopOf="@+id/band_pic"
         app:lottie_fileName="check_pop.json" />
 
 
